
  * [Roland] The much-awaited 3.0 release!  Yay!
  * [Roland] This Debian release is dedicated to Christian and his wife,
    whose marriage was five years old on the 20th of June.
  * [Roland] Do not take the availability of mod_userdir.c for granted.
    Patch from Tomas Pospisek <tpo_deb@sourcepole.ch> (closes: #197606).
  * [Roland] Bumped Standards-Version: to 3.5.10 (no changes needed).

 -- Roland Mas <lolando@debian.org>  Mon, 23 Jun 2003 22:16:03 +0200

gforge (3rc2-4) unstable; urgency=low

  * [Roland] Install README.Debian into all packages (Gforge bug #340),
    and README.Multipack into gforge-common (closes: #193151).
  * [Roland] We can even quit using the OID 1.3.6.1.4.1.9586.1.1
    (iso.org.dod.internet.private.enterprise.Debian.package.sourceforge)
    and start using the newly assigned 1.3.6.1.4.1.9586.100.3
    (iso.org.dod.internet.private.enterprise.Debian.package.gforge)
    instead.  That means a global s/debSf/debGforge/ in attribute types
    and object classes, in all the files that use LDAP.
  * [Roland] Lots of fixes in the Debconf variable handling.  It should be
    more straightforward now, more logical (variables have been moved to
    their proper package), more policy-compliant (gforge.conf is read and
    Debconf is initialised from it as much as possible), and it even
    actually seems to work.
  * [Christian] Added {cronolog_path} in httpd.conf.template, make it fill
    by gforge-config and removed dependancy on a specific cronolog version
  * [Roland] Fixed create-mailing-lists.pl to change the base URL of newly
    created mailing-lists (Gforge bug #331).  Also added a
    fix-mailing-lists.pl script to fix the previous damage.  We even run
    this script if the previously installed version was likely to have the
    bug.
  * [Roland] and [Christian] Added cn: fiend in LDAP entries for
    mailing-lists.
  * [Roland] Stopped trying to create/modify the base DN of the LDAP
    directory if it already exists.
